--- a/waku/Makefile
+++ b/waku/Makefile
@@ -14,11 +14,12 @@ all: build
 prepare:
 	@echo "Creating third_party directory..."
 	@mkdir -p $(THIRD_PARTY_DIR)
-	
 	@echo "Cloning nwaku repository..."
 	@if [ ! -d "$(NWAKU_DIR)" ]; then \
 		cd $(THIRD_PARTY_DIR) && \
-		git clone $(NWAKU_REPO); \
+		git clone $(NWAKU_REPO) && \
+		cd $(NWAKU_DIR) && \
+		make update; \
 	else \
 		echo "nwaku repository already exists."; \
 	fi
