update steps for submodule build

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: StressTests
+name: Endurance Tests
 
 on:
   push:
@@ -11,27 +11,40 @@ on:
 jobs:
   endurance:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository (with submodules)
-        uses: actions/checkout@v4
+      - name: Check out repository
+        uses: actions/checkout@v3
         with:
-          submodules: recursive 
-          fetch-depth: 0         
+          # Tells GitHub to also clone submodules recursively
+          submodules: true
+
+      - name: Initialize & update submodules
+        run: git submodule update --init --recursive
+
+      - name: Prepare third_party directory
+        run: |
+          sudo mkdir -p third_party
+          sudo chown $USER third_party
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'  
+          go-version: "1.21"
 
-      - name: Install dependencies
+      - name: Install Go dependencies
         run: go mod download
 
-      - name: Run stress Tests
+      - name: Build nwaku dependencies
+        run: make -C waku
+
+      - name: Run Endurance Test
         run: |
+          # Increase timeout so long-running tests won't kill the job prematurely
           go test -v -count=1 -timeout=45m -run Test5Nodes1kTearDown ./... | tee testlogs.log
 
-      - name: Upload Logs
-        uses: actions/upload-artifact@v4
+      - name: Upload Test Logs
+        uses: actions/upload-artifact@v3
         with:
           name: endurance-logs
           path: testlogs.log
