--- a/.github/workflows/endurancce_test.yml
+++ b/.github/workflows/endurancce_test.yml
@@ -29,6 +29,12 @@ jobs:
         with:
           go-version: "1.21"
 
+      - name: Install Go dependencies
+        run: go mod download
+
+      - name: Build nwaku dependencies
+        run: make -C waku
+
       - name: Clean environment
         run: go clean -cache
 
