--- a/.github/workflows/endurancce_test.yml
+++ b/.github/workflows/endurancce_test.yml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Repeated test runs
         run: |
+          set +e
           for i in {1..10}; do
             echo "Iteration $i: measuring memory BEFORE the tests..."
             go run tools/memory_record.go --iteration $i --phase start
@@ -51,6 +52,7 @@ jobs:
             echo "Iteration $i: measuring memory AFTER the tests..."
             go run tools/memory_record.go --iteration $i --phase end
           done
+          set -e
 
       - name: Upload memory_metrics.csv
         uses: actions/upload-artifact@v4
