make yml file run on push

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,10 +1,8 @@
 name: Endurance Tests
 
 on:
-  pull_request:
+  push:
     branches: [ "stress_test" ]
-  schedule:
-    - cron: '0 2 * * *'
 
 jobs:
   endurance:
