--- a/.github/workflows/Repeated_tests_endurancce.yml
+++ b/.github/workflows/Repeated_tests_endurancce.yml
@@ -1,11 +1,8 @@
 name: Repeated Test Suite
 
 on:
-  push:
-    branches: [ "stress_test" ]
-  schedule:
-    - cron: '0 2 * * *'
-
+  workflow_dispatch:
+ 
 jobs:
   repeated-tests:
     runs-on: ubuntu-latest
