--- a/.github/workflows/Repeated_tests_endurancce.yml
+++ b/.github/workflows/Repeated_tests_endurancce.yml
@@ -5,7 +5,8 @@ on:
  
 jobs:
   repeated-tests:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ubuntu-22.04]
+    timeout-minutes: 900
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -41,7 +42,7 @@ jobs:
       - name: Repeated test runs
         run: |
           set +e
-          for i in {1..100}; do
+          for i in {1..80}; do
             echo "Iteration $i: measuring memory BEFORE the tests..."
             go run tools/memory_record.go --iteration $i --phase start
             echo "Running tests (iteration $i)..."
