--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third_party/nwaku"]
 	path = third_party/nwaku
-	url = https://github.com/waku-org/nwaku
+	url = https://github.com/waku-org/nwaku.git
