Fix syntax at yml file

--- a/.github/workflows/CI_endurance.yml
+++ b/.github/workflows/CI_endurance.yml
@@ -35,8 +35,8 @@ jobs:
           make -C waku clean 
       
       - name: Build nwaku dependencies
-         working-directory: third_party/nwaku
          run: |
+          cd third_party/nwaku
           git pull --ff-only        
           make update             
           make libwaku              
