--- a/.github/workflows/Repeated_tests_endurancce.yml
+++ b/.github/workflows/Repeated_tests_endurancce.yml
@@ -31,8 +31,8 @@ jobs:
         run: go mod download
 
       - name: Build nwaku dependencies
-        working-directory: third_party/nwaku
         run: |
+        cd third_party/nwaku
          git pull
          make update 
          make libwaku
