--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Run Daily Test
         run: |
-          go test -p=1 -v ./waku -count=15 -timeout=360m \
-            | tee testlogs.log
+          go test -count=5 -p=1 -v -timeout=360m ./waku \
++            | tee testlogs.log
 
       - name: Upload Test Logs
         uses: actions/upload-artifact@v4
