--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,8 @@ jobs:
 
       - name: Run Daily Test
         run: |
-          go test -count=5 -p=1 -v -timeout=360m ./waku \
+          set -euo pipefail
+          go test -count=10 -p=1 -v -timeout=360m ./waku \
             | tee testlogs.log
 
       - name: Upload Test Logs
