--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ name: Bindings Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: "0 2 * * *"
 
 jobs:
   Daily:
@@ -35,7 +35,7 @@ jobs:
         run: make -C waku
 
       - name: Increase ulimit
-        run: sudo sh -c "ulimit -n 8192"  
+        run: sudo sh -c "ulimit -n 65536"
 
       - name: Run Daily Test
         run: |
