--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,12 +34,11 @@ jobs:
       - name: Build nwaku dependencies
         run: make -C waku
 
-      - name: Increase ulimit
-        run: sudo sh -c "ulimit -n 65536"
-
       - name: Run Daily Test
         run: |
           set -euo pipefail
+          ulimit -n 65536
+          ulimit -n  # This will print the current limit to verify it worked
           go test -count=10 -p=1 -v -timeout=360m ./waku \
             | tee testlogs.log
 
