Modify test command

--- a/.github/workflows/Repeated_tests_endurancce.yml
+++ b/.github/workflows/Repeated_tests_endurancce.yml
@@ -39,18 +39,19 @@ jobs:
       - name: Initialize CSV
         run: echo "TestName,Iteration,Phase,HeapAlloc(KB),RSS(KB),Timestamp" > memory_metrics.csv
 
-      - name: Repeated test runs
-        run: |
-          set +e
-          for i in {1..80}; do
-            echo "Iteration $i: measuring memory BEFORE the tests..."
-            go run tools/memory_record.go --iteration $i --phase start
-            echo "Running tests (iteration $i)..."
-            go test -v -tags '!stress' ./...
-            echo "Iteration $i: measuring memory AFTER the tests..."
-            go run tools/memory_record.go --iteration $i --phase end
-          done
-          set -e
+    - name: Repeated test runs
+      run: |
+        set +e
+        for i in {1..20}; do
+          echo "Iteration $i: measuring memory BEFORE the tests..."
+          go run tools/memory_record.go --iteration $i --phase start
+          echo "Running tests (iteration $i)..."
+          go test -v -tags=stress ./...
+          echo "Iteration $i: measuring memory AFTER the tests..."
+          go run tools/memory_record.go --iteration $i --phase end
+        done
+        set -e
+
 
       - name: Upload memory_metrics.csv
         uses: actions/upload-artifact@v4
